--- a/EA1/Abgabedateien/EA1.html
+++ b/EA1/Abgabedateien/EA1.html
@@ -8414,7 +8414,7 @@ Beide Funktionen haben unter anderem den Parameter <code>overwrite_a</code>, der
 <h2>Laufzeitenanalyse mit repeat</h2>
 <p>Die Laufzeitenanalyse zeigt, dass lu_factor schneller ist als lu.
 Die Verwendung von overwrite_a=True führt zu leicht besseren (niedrigeren) Resultaten.<br/>
-Die Erhöhung der repetitions kann die Erbebnisse konstanter machen.
+Die Erhöhung der repetitions kann die Ergebnisse konstanter machen.
 Je nach System können die Laufzeiten variieren.</p>
 </span>
 </div>
